--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 <link href="https://db.onlinewebfonts.com/c/499a9b7e46661c79fd3aa2542cbdc440?family=SF+UI+Display+Medium" rel="stylesheet">
 
 @font-face {
-    font-family: "DIN Condensed Bold";
+    font-family: "DIN Condensed";
     src: url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.eot");
     src: url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.eot?#iefix")format("embedded-opentype"),
     url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.woff2")format("woff2"),
@@ -30,14 +30,17 @@ body {
 }
 
 h1 {
-    font-family: DIN Condensed Bold;
+    font-family: "DIN Condensed";
     font-size: 96px;
+  font-weight: normal;
+
+  font-style: normal;
     /* line-height: 75%; */
-    font-weight: 800;
 }
 
 h2 {
-    font-family: SF UI Display Medium;
+    font-family: "SF UI Display";
+  line-height: 2.1;
     font-size: 20px;
     font-weight: 500;
 }
@@ -53,23 +56,24 @@ a:hover {
 }
 
 #logo {
-    font-family: DIN Condensed Bold;
-    font-size: 72px;
-    line-height: 72px;
-   
-    height: 72px;
-    font-weight: 800;
+    font-family: "DIN Condensed";
+    font-size: 96px;
+    line-height: 0.75;
+   float: left;
+    
+    
     letter-spacing: 0px;
-    padding-left: 1px;
+    padding-left: 60px;
+  margin-right: 42px;
     color: #FFF;
 }
 
 #logo2 {
-    font-family: DIN Condensed Bold;
-    font-size: 72px;
-    line-height: 72px;
+    font-family: "DIN Condensed";
+    font-size: 167px;
+    line-height: 20px;
     height: 72px;
-    font-weight: 800;
+    
     letter-spacing: 0px;
     padding-left: 1px;
     color: #A463BD;
@@ -87,24 +91,23 @@ a:hover {
     background-image: url("https://myopika1.github.io/dogbg.png");
     background-repeat: no-repeat;
     background-size: contain;
-    padding: 16px 19px 0 19px;
     aspect-ratio: 1000/747;
 }
 
 .header {
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-between; */
-    gap: 46px;
-    /* align-items: flex-start; */
-    margin-bottom: 1px;
+  margin-top: 35px;
+    
 
+}
+
+.menu{
+  margin-top: 2px 
 }
 
 .menu ul {
     font-size: 24px;
-    font-family: SF UI Display Medium;
+    font-family: "SF UI Display Medium";
     display: flex;
     gap: 40px;
     list-style: none;
@@ -117,46 +120,87 @@ a:hover {
     color: #FFF;
 }
 
-.menu2 ul {
+
+  
+.row {
+  display: flex;
+    /*
+    * Флекс-элементы будут раскладываться
+    * слева направо.
+    */
+    flex-direction: row;
+    /*
+    * Прижимаем флекс-элементы к левому краю.
+    */
+    justify-content: flex-start;
+    /*
+    * Если места для элементов не хватает,
+    * запрещаем их перенос на следующую строку.
+    */
+    flex-wrap: nowrap;
+} 
+
+.col-1,
+.col-2,
+.col-3{
+   flex-grow: 0;
+    /*
+    * flex-shrink определяет насколько сильно
+    * элемент будет уменьшатся, если
+    * во флекс-контейнере не хватит места.
+    */
+    flex-shrink: 0;
+    
+    /*
+    * Задаём колонкам внутренние отступы
+    * по умолчанию.
+    */
+    box-sizing: border-box;
+    padding-right: 20px;
+  width: 237px;
+  
+}
+
+.col-3{
+  width: 366px;
+    
+}
+
+.footer .col-3 a {
+  color: #A463BD;
+  font-family: "DIN Condensed";
+    font-size: 167px;
+  line-height: 114px;
+    letter-spacing: 0px;
+  
+   
+}
+
+.footer ul {
     font-size: 20px;
-    font-family: SF UI Display Medium;
-    display: flex;
-    gap: 40px;
+    font-family: "SF UI Display Medium";
+    display: block;
     list-style: none;
     margin: 0;
     padding: 0;
     color: #5A5A5A;
+  max-width: 237px
+    float: left
 }
 
-.menu2 a {
+.col-1 ul li {
+  margin-bottom: 20px
+}
+
+.col-2 ul li {
+  margin-bottom: 10px
+}
+
+.footer a {
     color: #5A5A5A;
 }
 
-.breadcrumb {
-    display: flex;
-    width: 100%;
-    margin: 0 0 56px 0;
-}
 
-.breadcrumb a {
-    text-decoration: underline;
-    text-underline-offset: 1.6px;
-    text-decoration-thickness: .5px;
-}
-
-.breadcrumb ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.breadcrumb li:not(:last-child)::after {
-    display: inline-block;
-    margin: 0 3.8px;
-    content: ">";
-}
 
 .hero {
     display: flex;
@@ -164,7 +208,7 @@ a:hover {
     gap: 50px;
     max-width: 429px;
     text-align: center;
-    margin-left: 446px;
+    margin-left: 320px;
     margin-top: 46px;
 }
 
@@ -178,21 +222,22 @@ a:hover {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 13px 20px 20px 20px;
+    padding: 25px 64px 35px 60px;
+  width: 876px;
+  height: 83px;
     background: #FFF;
 }
 
-#first {
+#description {
     color: #fff;
     max-width: 270px;
+  line-height: 1.1;
     text-align: left;
-}
-
-#first span {
-    font-family: SF UI Display Medium;
+  font-family: "SF UI Display Medium";
     font-size: 24px;
     font-weight: 500;
 }
+
 
 #second {
     color: #5A5A5A;
@@ -208,8 +253,6 @@ a:hover {
 }
 
 #yellow {
-    font-family: SF UI Display Medium;
-    font-size: 20px;
-    font-weight: 400;
     color: #FAE229;
 }
+
