--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
-<link href="https://db.onlinewebfonts.com/c/d45f96029e61832fd84afffd3068b768?family=DIN+Condensed+Bold" rel="stylesheet">
+<link href="https://db.onlinewebfonts.com/c/954a505bdd1fd46577f8b93badf61c8c?family=DIN+Condensed" rel="stylesheet">
 
 <link href="https://db.onlinewebfonts.com/c/499a9b7e46661c79fd3aa2542cbdc440?family=SF+UI+Display+Medium" rel="stylesheet">
 
 @font-face {
     font-family: "DIN Condensed";
-    src: url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.eot");
-    src: url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/d45f96029e61832fd84afffd3068b768.svg#DIN Condensed Bold")format("svg");
+    src: url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.eot");
+    src: url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.eot?#iefix")format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.woff2")format("woff2"),
+    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.woff")format("woff"),
+    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.ttf")format("truetype"),
+    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.svg#DIN Condensed")format("svg");
 }
 
 @font-face {
