--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,18 @@
-<link href="https://db.onlinewebfonts.com/c/954a505bdd1fd46577f8b93badf61c8c?family=DIN+Condensed" rel="stylesheet">
+
 
 <link href="https://db.onlinewebfonts.com/c/499a9b7e46661c79fd3aa2542cbdc440?family=SF+UI+Display+Medium" rel="stylesheet">
 
-@font-face {
-    font-family: "DIN Condensed";
-    src: url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.eot");
-    src: url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.eot?#iefix")format("embedded-opentype"),
-    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.woff2")format("woff2"),
-    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.woff")format("woff"),
-    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/954a505bdd1fd46577f8b93badf61c8c.svg#DIN Condensed")format("svg");
+@font-face{
+    font-family: "DIN Condensed Web";
+    src: url("69dbc1186412d7831b88d8a78a360360.eot");
+    src: url("69dbc1186412d7831b88d8a78a360360.eot?#iefix")format("embedded-opentype"),
+        url("69dbc1186412d7831b88d8a78a360360.woff")format("woff"),
+        url("69dbc1186412d7831b88d8a78a360360.woff2")format("woff2"),
+        url("69dbc1186412d7831b88d8a78a360360.ttf")format("truetype"),
+        url("69dbc1186412d7831b88d8a78a360360.svg#DIN Condensed Web")format("svg");
+    font-weight:normal;
+    font-style:normal;
+    font-display:swap;
 }
 
 @font-face {
@@ -29,8 +32,8 @@ body {
     background: #F5F5F5;
 }
 
-h1 {
-    font-family: "DIN Condensed";
+h1 { 
+    font-family: "DIN Condensed Web";
     font-size: 96px;
   font-weight: normal;
 
@@ -56,7 +59,7 @@ a:hover {
 }
 
 #logo {
-    font-family: "DIN Condensed";
+    font-family: "DIN Condensed Web";
     font-size: 96px;
     line-height: 0.75;
    float: left;
@@ -69,7 +72,7 @@ a:hover {
 }
 
 #logo2 {
-    font-family: "DIN Condensed";
+    font-family: "DIN Condensed Web";
     font-size: 167px;
     line-height: 20px;
     height: 72px;
@@ -173,7 +176,7 @@ a:hover {
 
 .footer .col-3 a {
   color: #A463BD;
-  font-family: "DIN Condensed";
+  font-family: "DIN Condensed Web";
     font-size: 167px;
   line-height: 100px;
     letter-spacing: 0px;
