--- a/styles.css
+++ b/styles.css
@@ -214,10 +214,10 @@ a:hover {
 .hero {
     display: flex;
     flex-direction: column;
-    gap: 36px;
+    gap: 35px;
     max-width: 429px;
     text-align: center;
-    margin-left: 323px;
+    margin-left: 320px;
     margin-top: 71px;
 }
 
@@ -250,13 +250,14 @@ a:hover {
 
 #second {
     color: #5A5A5A;
-      letter-spacing: -2.5px;
+      letter-spacing: -2.4px;
 }
 
 #second h1 {
     font-size: 96px;
     line-height: 0.75;
      font-style:normal;
+        font-weight: 100;
     text-align: left;
     margin: 0;
     padding: 0;
